--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
  </body>
 
     <div style="position:relative; background-color: #DBE8E8; min-height: 50vh;""
-        <h1>Welcome to my App</h1>
-        <p>Hola,</p>
-            <p>I'm Edita Rojas</p>
-            <p>I am a creative writer aspiring to UX/UI Designer</p>
-            <button class="#">Projects</button>
+    image src=/Users/editarojas/Documents/coding/UX_UI_Homework_17/Imges/Edita circle image.png alt=body    
+    <h1>Hola, I'm Edita Rojas</h1>
+        <p>Welcome to my Portfolio</p>
+            <p>I am a creative writer aspiring to UX/UI Designer</p 
+                <button class="#">Linkedln</button>    
             <button class="#">Linkedln</button>
-            <h1>Welcome to my App</h1>
 
 </div>
+
  </style>
 </body>
 </html>
@@ -92,12 +92,9 @@
               </div>
     </section> 
 
-    </section>
-    <div class="image-divider">
-    </div>
- </section>
-
  <footer>
+    <p class="credit">© Copyright 2021 Edita Rojas.<br>
+		Designed and Developed by Edita Rojas.</p>
      <div class="footer-content">
  <ul class="social">
     <li><a href="#">Linkedln</a></li>
