--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
+
 <!DOCTYPE html>
 <html>
     <head>
-    <meta charset="""utf-8">
+    <meta charset="utf-8">
     <link rel="stylesheet" href="index.css">
+    
     </head>
-    <body>
        <nav>
         <div class="logo">
-                <h4>Edita Rojas</h4>
+                <h1>Edita Rojas</h1>
                 <ul>
             </div>
-            <ul class=nav-links">
+            <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Projects.html">Projects</a></li>
                 <li><a href="About Me.html">About Me</a></li>
@@ -19,89 +20,82 @@
              </ul>
              </nav>
  
-
+<body>
  <header>
     <div class="hero-image">
         <div class="hero-text">
-		<h1>Hola, I'm Edita Rojas</h1>
+		<h2>Hola, I'm Edita Rojas</h2>
 		<p>I am a creative writer aspiring to UX/UI Designer</p>
     <a href= "#" class="hero-btn"> Linkedln</a>
     <a href= "#" class="hero-btn"> Email</a>
 	</div>
     <div class= "hero-girl">
-    <img src="./Imges/Girl hero image.png" alt="girl" />
+    <img src="./Imges/hero image small.png" alt="girl" />
 </div>
 </div>
-</div>
-</div>
-</HTML>
+</html>
 </head>
 </header>
 
-<h2>my projects.</h2>
-<section class="Projects">
+
+<h3>My Projects</h3>
+<section class="Work">
 	<div class="image-area left">
-    <img  alt="Website" src="Imges/Screen Shot 2021-03-05 at 10.39.22 PM.png"></div>
+    <img src="Imges/Screen Shot 2021-03-05 at 10.39.22 PM.png" alt="Frugal Penny">
+  </div>
 	<div class="text-box">
 		<div class="text-box-content">
 			<h3>Frugal Penny</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			<p>Have ever you wanted to own your home or teach your kids about money? The mobile app is designed to help you save money as you learn about financial literacy. </p>
 <a class="button" href="#" target="_blank">view project</a>
 		</div>
 	</div>
 </section>
 
-<div class="image-area right">
-    <img alt="Website" src="Imges/Screen Shot 2021-03-05 at 11.04.10 PM.png"></div>
-<div class="text-box">
-	<div class="text-box-content">
-		<h3>Unwomen Redesign</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+<section class="Work">
+	<div class="image-area left">
+    <img src="Imges/Screen Shot 2021-03-05 at 11.04.10 PM.png" alt="Un Women">
+  </div>
+	<div class="text-box">
+		<div class="text-box-content">
+			<h3>UnWomen Redesign</h3>
+			<p>The goal of the Unwomen website redesign project is to improve the users experience on the homepage.</p>
 <a class="button" href="#" target="_blank">view project</a>
+		</div>
 	</div>
-</div>
 </section>
 
-<div class="image-area left"><img alt="Website" src="Imges/Screen Shot 2021-03-05 at 11.19.40 PM.png"></div>
-<div class="text-box">
-	<div class="text-box-content">
-		<h3>Upcoming Final Project</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+<section class="Work">
+	<div class="image-area left">
+    <img src="Imges/Screen Shot 2021-03-05 at 11.19.40 PM.png" alt="Covid-Track">
+  </div>
+	<div class="text-box">
+		<div class="text-box-content">
+			<h3>Covid-Track</h3>
+			<p>An app to help people travel around the world during the diffcult times of the 2020 Covid-19 Pandemic. The app was designed to keep travlers updated on latest Covid-19 stats and restrictions.</p>
 <a class="button" href="#" target="_blank">view project</a>
+		</div>
 	</div>
-    </div>
-    </section>
-</div>
+</section>
+
+<section class="contact">
+  <div class="contact-content">
+    <h4>Have a Project in mind? Any Questions? Email me:<a class="email" href=
+      "mailto:e18rojas70@gmail.com"> e18rojas70@gmail.com</a></h4>
+  </div>
+</section>
 
 
-    <section class="contact">
-        <div class="contact-content">
-            <h4>Have a project in mind? Any questions? Email me:
-    <a class="email" href="e18rojas70@gmail.com">e18rojas70@gmail.com</a></h4>
-        </div>
-        </section>
+<footer>
+<div class="footer-content">
+<p class="credit">&copy; Copyright 2021 Edita Rojas.<br>Designed and Developed by Edita Rojas.</p>
+<ul class="social">
+<li><a href="#" target="_blank">Linkedln.</a></li>
+<li><a href="#" target="_blank">Pinterest.</a></li>
+<li><a href="#" target="_blank">Email.</a></li>
 
-    <footer>
-     <div class="footer-content">
-    <p class="credit"> Copyright 2021 Edita Rojas.<br>Designed and Developed by Edita Rojas.</p>
-    <ul class="social">
-    <li><a href="#" target="_blank">facebook.</a></li>
-    <li><a href="#" target="_blank">linkedin.</a></li>
-    <li><a href="#" target="_blank">email.</a></li>
- </ul>
+</ul>
 </div>
 </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
+</body>
 
