--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="index.css">
+
+ <!-- Hotjar Tracking Code for https://e18rojas.github.io/UX_UI_Homework_17/ -->
+<script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:2323305,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+</script>
     
     </head>
        <nav>
